# Multi-Agent-CrewAi

./: .gitignore  README.md  app.py  crew.jsonc  pyproject.toml
.streamlit/: config.toml  secrets.toml.example
agents/: ai_system_architect_for_topic.jsonc  technology_research_specialist.jsonc
output/: architecture_report.md
